argo/broek/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: broek
  labels:
    app.kubernetes.io/name: broek
    app.kubernetes.io/instance: broek
