argo/broek/piwigo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piwigo
  namespace: broek
  labels:
    app.kubernetes.io/name: piwigo
    app.kubernetes.io/instance: piwigo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: piwigo
  template:
    metadata:
      labels:
        app: piwigo
    spec:
      containers:
        - name: piwigo
          image: linuxserver/piwigo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: piwigo-data
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: piwigo-data
          persistentVolumeClaim:
            claimName: piwigo-data
---
apiVersion: v1
kind: Service
metadata:
  name: piwigo-svc
  namespace: broek
  labels:
    app.kubernetes.io/name: piwigo
spec:
  type: ClusterIP
  selector:
    app: piwigo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piwigo
  namespace: broek
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - broek-fotos.mangelschots.org
      secretName: piwigo-tls
  rules:
    - host: broek-fotos.mangelschots.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: piwigo-svc
                port:
                  number: 80
